// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _accessKey="V" 1`] = `
<kol-combobox _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox">
      <kol-input _accesskey="V" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" role="presentation">
        <span slot="label">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input accesskey="V" aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _alert=true 1`] = `
<kol-combobox _alert="" _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox">
      <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" role="presentation">
        <span slot="label">
          <span>
            Label
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _disabled=true 1`] = `
<kol-combobox _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox combobox--disabled">
      <kol-input _disabled="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" role="presentation">
        <span slot="label">
          <span>
            Label
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" disabled="" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" disabled="" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _hint="Hint" 1`] = `
<kol-combobox _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox">
      <kol-input _hint="Hint" _id="id-nonce" _label="Label" _tooltipalign="top" role="presentation">
        <span slot="label">
          <span>
            Label
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input aria-autocomplete="both" aria-controls="listbox" aria-describedby="id-nonce-hint" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-combobox _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox">
      <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" role="presentation">
        <span slot="label">
          <span>
            Label
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-combobox _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox">
      <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" role="presentation">
        <span slot="label">
          <span>
            Label
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-combobox _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox">
      <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" role="presentation">
        <span slot="label">
          <span>
            Label
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-combobox _hide-error="" _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox">
      <kol-input _hideerror="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" role="presentation">
        <span slot="label">
          <span>
            Label
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-combobox _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox">
      <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" role="presentation">
        <span slot="label">
          <span>
            Label
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _readOnly=true 1`] = `
<kol-combobox _readonly="" _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox">
      <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" role="presentation">
        <span slot="label">
          <span>
            Label
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _shortKey="S" 1`] = `
<kol-combobox _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox">
      <kol-input _hint="" _id="id-nonce" _label="Label" _shortkey="S" _tooltipalign="top" role="presentation">
        <span slot="label">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _touched=true 1`] = `
<kol-combobox _touched="" _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox">
      <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" _touched="" role="presentation">
        <span slot="label">
          <span>
            Label
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] 1`] = `
<kol-combobox _value="Herr" class="kol-combobox">
  <template shadowrootmode="open">
    <div class="combobox">
      <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" role="presentation">
        <span slot="label">
          <span>
            Label
          </span>
        </span>
        <div slot="input">
          <div class="combobox__group">
            <input aria-autocomplete="both" aria-controls="listbox" aria-expanded="false" aria-labelledby="id-nonce" autocapitalize="off" autocorrect="off" class="combobox__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
            <button class="combobox__icon" tabindex="-1">
              <kol-icon _icons="codicon codicon-triangle-down" _label="kol-dropdown"></kol-icon>
            </button>
          </div>
        </div>
      </kol-input>
    </div>
  </template>
</kol-combobox>
`;
